@@ -35,6 +35,7 @@ S3method(print,summary.validate_model)
 S3method(print,summary_hierarchical_coverage_regex)
 S3method(print,term_count)
 S3method(print,term_list)
+S3method(print,term_list_template)
 S3method(print,termco_nested)
 S3method(print,termco_unnested)
 S3method(print,token_count)
@@ -93,6 +94,7 @@ export(term_before)
 export(term_cols)
 export(term_count)
 export(term_first)
+export(term_list_template)
 export(token_count)
 export(uncovered)
 export(unnest_source_term_list)
